Fixed registration button overflow

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,62 +1,66 @@
 .logo {
-    width: 100px;
+  width: 100px;
 }
 
 .title-of-image {
-    margin-top: 0%;
-    font-weight: bold;
+  margin-top: 0%;
+  font-weight: bold;
 }
 
 .button-description {
-    text-align: center;
-    font-weight: 300;
+  text-align: center;
+  font-weight: 300;
 }
 
 .arrow {
-    color: white;
-    font-size: 30px;
-    display: inline-block;
+  color: white;
+  font-size: 30px;
+  display: inline-block;
+}
+
+.arrow .visible {
+  animation: bounce 2s infinite; /* Apply animation when button is visible */
+}
+
+.arrow .hidden {
+  animation: none; /* Disable animation when button is hidden */
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
   }
-  
-  .arrow .visible {
-    animation: bounce 2s infinite; /* Apply animation when button is visible */
+  40% {
+    transform: translateY(-10px);
   }
-  
-  .arrow .hidden {
-    animation: none; /* Disable animation when button is hidden */
+  60% {
+    transform: translateY(-5px);
   }
-  
-  @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-      transform: translateY(0);
-    }
-    40% {
-      transform: translateY(-10px);
-    }
-    60% {
-      transform: translateY(-5px);
-    }
-  }
+}
 
 .arrow-and-desc {
-    text-align: center;
+  text-align: center;
 }
 
 .card {
-    display: none; /* Initially hide the card */
-    margin: 20px; /* Adjust margin as per your design */
-  }
-  
-  .card.visible {
-    display: block; /* Show the card when it has the 'visible' class */
-      position: absolute;
-      margin-top: 15px;
-      padding: top;
-      margin-bottom: 0px;
-      margin-left: 0;
-      margin-right: 0;
+  display: none; /* Initially hide the card */
+  margin: 20px; /* Adjust margin as per your design */
+}
 
-    bottom: 0;
+.card.visible {
+  display: block; /* Show the card when it has the 'visible' class */
+  position: absolute;
+  margin-top: 15px;
+  padding: top;
+  margin-bottom: 0px;
+  margin-left: 0;
+  margin-right: 0;
+
+  bottom: 0;
   left: 0;
   right: 0;
   background-color: white;
@@ -64,28 +68,25 @@
   border-top-right-radius: 20px;
   box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
   height: 60%; /* Adjust height as needed */
-  overflow-y: hidden; /* Enable scrolling if content exceeds height */
+  overflow-y: scroll; /* Enable scrolling if content exceeds height */
   transform: translateY(0);
   animation: slideInFromBottom 0.5s ease;
-    
 }
-  
+
 @keyframes slideInFromBottom {
-    0% {
-      opacity: 0;
-      transform: translateY(100%);
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0);
-    }
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
   }
-  .card-title{
-    font-weight: bold;
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
+}
+.card-title {
+  font-weight: bold;
+}
 
-  .form-ele{
-    justify-self: center;
-  }
-
-  
+.form-ele {
+  justify-self: center;
+}
